# pinentry

./: .gitignore  AUTHORS  ChangeLog  ChangeLog-old  Makefile.am  Manifest  NEWS  README  README.md  THANKS  TODO  acconfig.h  acinclude.m4  autogen.rc  autogen.sh  configure.ac  configure.in.in  pinentry.lsm
admin/: Makefile.common  acinclude.m4.in  am_edit  conf.change.pl  configure.in.min  libtool.m4.in
assuan/: ChangeLog  ChangeLog-old  Makefile.am  Manifest  README.1st  assuan-buffer.c  assuan-handler.c  assuan-pipe-server.c  assuan-util.c  assuan.h  mkerrors
build-aux/: config.guess  config.sub  git-log-footer  gitlog-to-changelog  missing  texinfo.tex
curses/: Makefile.am  Manifest  pinentry-curses.c
debian/: README.Debian  changelog  control  copyright  pinentry-curses.files  pinentry-curses.postinst  pinentry-curses.prerm  pinentry-gtk.files  pinentry-gtk.postinst  pinentry-gtk.prerm  pinentry-qt.files  pinentry-qt.postinst  pinentry-qt.prerm  rules
doc/: ChangeLog  HACKING  Makefile.am  pinentry.texi  texinfo.tex
doc/en/: Makefile.am  index.docbook
docker/: build-pinentry-qt4-docker-image.sh  run-pinentry-qt4-build.sh
docker/pinentry-qt4/: Dockerfile
efl/: Makefile.am  pinentry-efl.c
emacs/: Makefile.am  pinentry-emacs.c
fltk/: Makefile.am  encrypt.xpm  icon.xpm  main.cxx  passwindow.cxx  passwindow.h  pinwindow.cxx  pinwindow.h  qualitypasswindow.cxx  qualitypasswindow.h
gnome3/: Makefile.am  pinentry-gnome3.c
gtk/: Makefile.am  Manifest  gtksecentry.c  gtksecentry.h  pinentry-gtk.c
gtk+-2/: Makefile.am  gseal-gtk-compat.h  gtksecentry.c  gtksecentry.h  padlock-keyhole.xpm  pinentry-gtk-2.c
jnlib/: ChangeLog  Makefile.am  argparse.c  libjnlib-config.h
kde/: Makefile.am  cppmemory.cpp  main.cpp  pinentry.desktop  pinentrycontroller.cpp  pinentrycontroller.h  pinentrydialog.cpp  pinentrydialog.h
kpinentry/: Makefile.am  cppmemory.cpp  i18n.h  main.cpp  memory.h  pinentrycontroller.cpp  pinentrycontroller.h  pinentrydialog.cpp  pinentrydialog.h  secmem.cpp  util.cpp  util.h
m4/: ChangeLog  Makefile.am  curses.m4  libassuan.m4  pkg.m4  qt.m4  qt4.m4  qt5.m4  qt6.m4
macosx/: AppDelegate.h  AppDelegate.m  Icon.icns  Info.plist  KeychainSupport.h  KeychainSupport.m  Main.xib  Makefile.am  NSStringExtensions.h  NSStringExtensions.m  PassphraseLengthFormatter.h  PassphraseLengthFormatter.m  Pinentry.xib  PinentryMac.h  PinentryMac.m  ShortcutHandlingFields.h  ShortcutHandlingFields.m  Version.config  copyInfoPlist.sh  de.strings  en.strings  main.m
macosx/pinentry-mac.xcodeproj/: project.pbxproj
macosx/pinentry-mac.xcodeproj/xcshareddata/xcschemes/: pinentry-mac.xcscheme
pinentry/: Makefile.am  Manifest  argparse.c  argparse.h  password-cache.c  password-cache.h  pinentry-curses.c  pinentry-curses.h  pinentry-emacs.c  pinentry-emacs.h  pinentry.c  pinentry.h
po/: pinentry.pot
qt/: Makefile.am  Manifest  README.SecQ  accessibility.cpp  accessibility.h  capslock.cpp  capslock.h  capslock_p.h  capslock_unix.cpp  capslock_win.cpp  cppmemory.cpp  keyboardfocusindication.cpp  main.cpp  org.gnupg.pinentry-qt.desktop.in  pinentryconfirm.cpp  pinentryconfirm.h  pinentrycontroller.cpp  pinentrycontroller.h  pinentrydialog.cpp  pinentrydialog.h  pinentryrc.qrc  pinlineedit.cpp  pinlineedit.h  qti18n.cpp  secqinternal.cpp  secqinternal_p.h  secqlineedit.cpp  secqlineedit.h  secqstring.cpp  secqstring.h
qt/icons/: Makefile.am
qt4/: Makefile.am  main.cpp  pinentry.qrc  pinentryconfirm.cpp  pinentryconfirm.h  pinentryconfirm.moc  pinentrydialog.cpp  pinentrydialog.h  pinentrydialog.moc  pinlineedit.cpp  pinlineedit.h  qrc_pinentry.cpp  qsecurelineedit.cpp  qsecurelineedit.h  qsecurelineedit.moc  qsecurelineedit_p.h  secstring.cpp  secstring.h
qt5/: Makefile.am  capslock.cpp  capslock.h  capslock_p.h  capslock_unix.cpp  focusframe.cpp  main.cpp  org.gnupg.pinentry-qt5.desktop.in  pinentrydialog.cpp  pinentryrc.qrc  pinlineedit.cpp
qt5/icons/: Makefile.am
secmem/: Makefile.am  Manifest  memory.h  secmem++.h  secmem-util.h  secmem.c  util.c  util.h
tqt/: Makefile.am  main.cpp  pinentrydialog.cpp  pinentrydialog.h  secqinternal.cpp  secqinternal_p.h  secqlineedit.cpp  secqlineedit.h  secqstring.cpp  secqstring.h
tty/: Makefile.am  pinentry-tty.c
w32/: Makefile.am  Manifest  controller.c  controller.h  dialog.c  dialog.h  main.c  pinentry-w32.rc  pinentry_w32.dsp  pinentry_w32.dsw  pinentry_w32.rc  pinentrycontroller.c  pinentrycontroller.h  pinentrydialog.c  pinentrydialog.h  resource.h
